Atualização index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animepedia</title>
+    <style type="text/css">
+        @import url("styles/stlye.css");
+    </style>
     <!--Style serve para encorporar de forma interna uma folha de css. type serve para deixar o claro-->
     <!--que o estilo vai receber código do tipo css o main antes de p significa que todos os parágrafos dentro-->
     <!--da tag main serão configurados seguindo a configuração-->
