--- a/sac.html
+++ b/sac.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animepedia</title>
+    <style type="text/css">
+        @import url("styles/stlye.css");
+    </style>
 </head>
 <body>
     <header>
