--- a/catalogo.html
+++ b/catalogo.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <h1>Animepedia, a sua enciclopedia digital de personagens de animes</h1>
     </header>
     <nav>
@@ -28,7 +28,7 @@
         <!--A tag tr é a linha para os dados (table row)-->
         <!--A tag td é a coluna para os dados-->
         <!--A tag tl é a coluna para os dados-->
-        <table border="1"> <!--Border serve para colocar borda na tabela-->
+        <table id="tabela" border="1"> <!--Border serve para colocar borda na tabela-->
             <thead>
                 <tr>
                     <th>Foto:</th>
@@ -84,7 +84,7 @@
             </tr>            
         </table>
     </main>
-    <footer>
+    <footer class="rodapé">
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
