--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--quando usamos o @import url, importaremos a configuração css de estilo do arquivo estilos.css-->
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <h1>Animepedia: a sua enciclopedia digital de personagens de animes</h1>
     </header>
     <nav>
@@ -43,7 +43,7 @@
         </ul>
 
     </main>
-    <footer>
+    <footer class="rodapé">
         <!--Abaixo, usamos a classe que criamos acima-->
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
