--- a/sac.html
+++ b/sac.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <h1>Animepedia: a sua enciclopedia digital de personagens de animes</h1>
     </header>
     <nav>
@@ -45,7 +45,7 @@
         </form>
 
     </main>
-    <footer>
+    <footer class="rodapé">
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
