--- a/sac.html
+++ b/sac.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animepedia</title>
     <style type="text/css">
-        @import url("styles/stlye.css");
+        @import url("styles/style.css");
     </style>
 </head>
 <body>
