--- a/sac.html
+++ b/sac.html
@@ -40,8 +40,8 @@
         <input type="text" id="id_email" name="email"><br><br>
         <label for="id_mensagem">Mensagem:</label><br>
         <textarea name="mensagem" id="id_mensagem"></textarea><br><br>
-        <input type="submit" value="Enviar">
-
+        <button type="submit">Enviar</button>
+            
         </form>
 
     </main>
