--- a/sac.html
+++ b/sac.html
@@ -34,10 +34,13 @@
         <!--textarea serve para criar uma área de texto, podendo os usuários escreverem extensos textos-->
         <label for="id_nome">Nome do cliente:</label><br> 
         <input type="text" id="id_nome" name="nome"><br><br>
+
         <label for="id_assunto">Assunto da mensagem:</label><br> 
-        <input type="text" id="id_assunto" name="assunto"><br><br>            
+        <input type="text" id="id_assunto" name="assunto"><br><br>
+
         <label for="id_email">Email:</label><br> 
         <input type="text" id="id_email" name="email"><br><br>
+        
         <label for="id_mensagem">Mensagem:</label><br>
         <textarea name="mensagem" id="id_mensagem"></textarea><br><br>
         <button type="submit">Enviar</button>
@@ -49,5 +52,6 @@
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
