--- a/sac.html
+++ b/sac.html
@@ -40,6 +40,9 @@
 
         <label for="id_email">Email:</label><br> 
         <input type="text" id="id_email" name="email"><br><br>
+
+        <label for="id_cpf">CPF:</label><br> 
+        <input type="text" id="id_cpf" name="cpf"><br><br>       
         
         <label for="id_mensagem">Mensagem:</label><br>
         <textarea name="mensagem" id="id_mensagem"></textarea><br><br>
@@ -52,6 +55,6 @@
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/validacao.js"></script>
 </body>
 </html>
