--- a/catalogo.html
+++ b/catalogo.html
@@ -39,54 +39,17 @@
                     <th>Curiosidade</th>               
                 </tr>
             </thead>
-            <tr>
-                <!--img serve para colocar imagem. Scr é o parâmetro da fonte e alt é o texto alternativo caso a imagem não carregue-->
-                <!--width serve para configurar o tamanho da imagem-->
-                <td><img src="img/Daiki Aomine.webp" width="70" alt="Foto do Daiki Aomine"></td>
-                <td>Daiki Aomine</td>
-                <td>16</td>
-                <td>Masculino</td>
-                <td>Kuroko no basket</td>
-                <td>Aomine foi o primeiro personagem a ser mostrado a entrar na habilidade chamada "astral" dentro do anime.</td>
-
-            </tr>
-            <tr>
-                <td><img src="img/Kakashi Hatake do Sharingan.jpg" width="70" alt="Foto do Kakashi Hatake"></td>
-                <td>Kakashi Hatake</td>
-                <td>31</td>
-                <td>Masculino</td>
-                <td>Naruto/Naruto Shipudden/Boruto</td>
-                <td>Kakashi é o único personagem que não vem do clã Uchiha que consegue usar o Susano´o</td>
-            </tr>
-            <tr>
-                <td><img src="img/Kyojurou Rengoku.webp" width="70" alt="Foto do Kyojuro Rengoku"></td>
-                <td>Kyojuro Rengoku</td>
-                <td>20</td>
-                <td>Masculino</td>
-                <td>Demon Slayer</td>
-                <td>Apesar de morrer muito cedo, Rengoku é um dos personagens mais amados pelos fãs do anime.</td>
-            </tr>
-            <tr>
-                <td><img src="img/Shoyo Hinata.webp" width="70" alt="Foto do Shoyo Hinata"></td>
-                <td>Shoyo Hinata</td>
-                <td>17</td>
-                <td>Masculino</td>
-                <td>Haikyuu!!</td>
-                <td>Hinata tem apenas 1,62 m de altura, apesar disso é um jogador muito rápido e explosivo, com saltos quase sobre-humanos, sendo uma peça essencial no time do Karasuno</td>
-            </tr>
-            <tr>
-                <td><img src="img/Tanjiro Kamado.jpg" width="70" alt="Foto do Tanjiro Kamado"></td>
-                <td>Tanjiro Kamado</td>
-                <td>25</td>
-                <td>Masculino</td>
-                <td>Demon Slayer</td>
-                <td>Apesar de ser um caçador de oni, Tanjiro aparentemente é o personagem que mais demonstra compaixão pelos oni que enfrenta.</td>
-            </tr>            
+            <tbody id="corpo-tabela-animes">
+                ----
+            </tbody>
         </table>
     </main>
     <footer class="rodapé">
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
+    <script src="js/carrega_dados.js"></script>
+    <script src="js/tema.js"></script>
 </body>
+
 </html>
