--- a/equipe.html
+++ b/equipe.html
@@ -35,5 +35,6 @@
         <p>© 2025 Animepedia. Todos os direitos reservados.</p>
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
+    <script src="js/tema.js"></script>
 </body>
 </html>
