--- a/sac.html
+++ b/sac.html
@@ -56,5 +56,6 @@
         <p>Este projeto é uma ferramenta educacional e não comercial. As informações e imagens de animes são utilizadas para fins de demonstração, aprendizado e ilustração de conceitos de desenvolvimento web.</p>
     </footer>
     <script src="js/validacao.js"></script>
+    <script src="js/tema.js"></script>
 </body>
 </html>
