Inserção do botão de alternar tema

--- a/equipe.html
+++ b/equipe.html
@@ -19,6 +19,7 @@
         <a href="catalogo.html">Catálogo |</a>
         <a href="sac.html">SAC |</a>
         <b>Equipe</b>
+        <button id="botao-tema" class="botao-tema">Alternar tema</button>
     </nav>
     <main>
         <h2>Equipe de Desenvolvimento desse Web Site</h2>
