--- a/sac.html
+++ b/sac.html
@@ -19,6 +19,7 @@
         <a href="catalogo.html">Catálogo |</a>
         <b>SAC</b> 
         <a id="nav-equipe" href="equipe.html">Equipe </a>
+        <button id="botao-tema" class="botao-tema">Alternar tema</button>
     </nav>
     <main>
         <h2>Serviço de atendimento ao cliente</h2>
