Inserção de botão

--- a/catalogo.html
+++ b/catalogo.html
@@ -19,7 +19,7 @@
         <b>Catálogo</b>
         <a href="sac.html">SAC |</a>
         <a id="nav-equipe" href="equipe.html">Equipe</a>
-        <button id="botao-tema" class="botao-tema">Alternar tema</button>
+        <button id="btnAlternarTema"></button>
     </nav>
     <main>
         <h2>Catálogo de personagens</h2>
