--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="catalogo.html">Catálogo |</a>
         <a href="sac.html">SAC |</a>
         <a id="nav-equipe" href="equipe.html">Equipe </a>
-        <button id="botao-tema" class="botao-tema">Alternar tema</button>
+        <button id="btnAlternarTema"></button>
     </nav>
     <main>
         <h2>Bem-vindos a Homepage do Animepedia: enciclopedia de personagens de animes</h2>
