Inserção do botão

--- a/catalogo.html
+++ b/catalogo.html
@@ -19,7 +19,7 @@
         <b>Catálogo</b>
         <a href="sac.html">SAC |</a>
         <a id="nav-equipe" href="equipe.html">Equipe</a>
-        <button id="btnAlternarTema"></button>
+        <a><button class="btnAlternarTema"></button>"</a>
     </nav>
     <main>
         <h2>Catálogo de personagens</h2>
