--- a/equipe.html
+++ b/equipe.html
@@ -19,7 +19,7 @@
         <a href="catalogo.html">Catálogo |</a>
         <a href="sac.html">SAC |</a>
         <b>Equipe</b>
-        <button id="btnAlternarTema"></button>
+        <a><button class="btnAlternarTema"></button>"</a>
     </nav>
     <main>
         <h2>Equipe de Desenvolvimento desse Web Site</h2>
