--- a/sac.html
+++ b/sac.html
@@ -19,7 +19,7 @@
         <a href="catalogo.html">Catálogo |</a>
         <b>SAC</b> 
         <a id="nav-equipe" href="equipe.html">Equipe </a>
-        <button id="btnAlternarTema"></button>
+        <a><button class="btnAlternarTema"></button>"</a>
     </nav>
     <main>
         <h2>Serviço de atendimento ao cliente</h2>
