Adequação do botão

--- a/catalogo.html
+++ b/catalogo.html
@@ -15,10 +15,10 @@
     <nav>
         <!--A tag "a" serve para criar link, significa anchor-->
         <!--href é um atributo para referenciar qual link a página irá-->
-        <a href="index.html">Home |</a>
-        <b>Catálogo</b>
-        <a href="sac.html">SAC |</a>
-        <a id="nav-equipe" href="equipe.html">Equipe |</a>
+        <a href="index.html">Home</a> |
+        <b>Catálogo</b> |
+        <a href="sac.html">SAC</a> |
+        <a id="nav-equipe" href="equipe.html">Equipe</a>
     </nav>
     <main>
         <h2>Catálogo de personagens</h2>
