--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <!--href é um atributo para referenciar qual link a página irá-->
         <!--id serve para identificar a tag-->
         <b>Home</b>
-        <a href="catalogo.html">Catálogo |</a>
-        <a href="sac.html">SAC |</a>
-        <a id="nav-equipe" href="equipe.html">Equipe </a>
+        <a href="catalogo.html">Catálogo</a> |
+        <a href="sac.html">SAC</a> |
+        <a id="nav-equipe" href="equipe.html">Equipe</a> |
         <a id="alternaTema" href="#"></a>
     </nav>
     <main>
