--- a/sac.html
+++ b/sac.html
@@ -15,10 +15,10 @@
     <nav>
         <!--A tag "a" serve para criar link, significa anchor-->
         <!--href é um atributo para referenciar qual link a página irá-->
-        <a href="index.html">Home </a>
-        <a href="catalogo.html">Catálogo |</a>
-        <b>SAC</b> 
-        <a id="nav-equipe" href="equipe.html">Equipe </a>
+        <a href="index.html">Home</a> |
+        <a href="catalogo.html">Catálogo</a> |
+        <b>SAC</b> |
+        <a id="nav-equipe" href="equipe.html">Equipe</a>
     </nav>
     <main>
         <h2>Serviço de atendimento ao cliente</h2>
