Adequação de página

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!--A tag "a" serve para criar link, significa anchor-->
         <!--href é um atributo para referenciar qual link a página irá-->
         <!--id serve para identificar a tag-->
-        <b>Home</b>
-        <a href="catalogo.html">Catálogo</a> |
-        <a href="sac.html">SAC</a> |
-        <a id="nav-equipe" href="equipe.html">Equipe</a> |
+        <b>Home</b> "|"
+        <a href="catalogo.html">Catálogo</a> "|"
+        <a href="sac.html">SAC</a> "|"
+        <a id="nav-equipe" href="equipe.html">Equipe</a> "|"
         <a id="alternaTema" href="#"></a>
     </nav>
     <main>
