--- a/catalogo.html
+++ b/catalogo.html
@@ -15,9 +15,9 @@
     <nav>
         <!--A tag "a" serve para criar link, significa anchor-->
         <!--href é um atributo para referenciar qual link a página irá-->
-        <a href="index.html">Home</a> |
-        <b>Catálogo</b> |
-        <a href="sac.html">SAC</a> |
+        <a href="index.html">Home</a> "|"
+        <b>Catálogo</b> "|"
+        <a href="sac.html">SAC</a> "|"
         <a id="nav-equipe" href="equipe.html">Equipe</a>
     </nav>
     <main>
