Adquação do css

--- a/equipe.html
+++ b/equipe.html
@@ -15,9 +15,9 @@
     <nav>
         <!--A tag "a" serve para criar link, significa anchor-->
         <!--href é um atributo para referenciar qual link a página irá-->
-        <a href="index.html">Home</a> "|"
-        <a href="catalogo.html">Catálogo</a> "|"
-        <a href="sac.html">SAC</a> "|"
+        <a href="index.html">Home</a> |
+        <a href="catalogo.html">Catálogo</a> |
+        <a href="sac.html">SAC</a> |
         <b>Equipe</b>
     </nav>
     <main>
